--- a/indicator-config/covid-1.yml
+++ b/indicator-config/covid-1.yml
@@ -17,11 +17,11 @@ expected_disaggregations: []
 graph_annotations: []
 graph_limits: []
 graph_stacked_disaggregation: ''
-graph_title: global_indicators.1-2-2-title
+graph_title: COVID-19 impact on work and income of households in Ghana
 graph_titles: []
 graph_type: line
-indicator_name: Covid 1
-indicator_number: ''
+indicator_name: COVID-19 impact on work and income of households in Ghana
+indicator_number: covid-1
 national_geographical_coverage: ''
 page_content: ''
 permalink: /covid-indicator-1
