--- a/indicator-config/covid-1.yml
+++ b/indicator-config/covid-1.yml
@@ -17,7 +17,7 @@ expected_disaggregations: []
 graph_annotations: []
 graph_limits: []
 graph_stacked_disaggregation: ''
-graph_title: []
+graph_title: COVID-19 impact on work and income of households in Ghana
 graph_titles: []
 graph_type: bar
 indicator_name: COVID-19 impact on work and income of households in Ghana
