--- a/indicator-config/covid-2.yml
+++ b/indicator-config/covid-2.yml
@@ -17,7 +17,7 @@ expected_disaggregations: []
 graph_annotations: []
 graph_limits: []
 graph_stacked_disaggregation: ''
-graph_title: global_indicators.1-2-2-title
+graph_title: Indications of recovery relating to SDG Goal 2
 graph_titles: []
 graph_type: bar
 indicator_name: Indications of recovery relating to SDG Goal 2
