--- a/indicator-config/covid-3.yml
+++ b/indicator-config/covid-3.yml
@@ -17,7 +17,7 @@ expected_disaggregations: []
 graph_annotations: []
 graph_limits: []
 graph_stacked_disaggregation: ''
-graph_title: global_indicators.1-2-2-title
+graph_title: Health impact of COVID-19
 graph_titles: []
 graph_type: bar
 indicator_name: Health impact of COVID-19
